// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`simpleHeatmap 1`] = `
{
  "annotation": {},
  "chartType": "heatmap",
  "config": {
    "heatmap": {
      "backgroundColor": "transparent",
      "color": {
        "colorScheme": [
          "#C2CEFF",
          "#B7C4FF",
          "#ACB9FF",
          "#A0AEFF",
          "#95A3FF",
          "#8998FF",
          "#7C8CFA",
          "#7080F4",
          "#6372F0",
          "#5766EC",
        ],
      },
      "label": {
        "enable": true,
      },
      "legend": {
        "border": true,
        "enable": true,
        "labelFontColor": "#646A73",
        "labelFontSize": 12,
        "labelFontWeight": 400,
        "maxSize": 1,
        "position": "rt",
        "shapeType": "rectRound",
      },
      "tooltip": {
        "enable": true,
      },
    },
  },
  "customTheme": {
    "config": {
      "heatmap": {
        "backgroundColor": "transparent",
        "color": {
          "colorScheme": [
            "#C2CEFF",
            "#B7C4FF",
            "#ACB9FF",
            "#A0AEFF",
            "#95A3FF",
            "#8998FF",
            "#7C8CFA",
            "#7080F4",
            "#6372F0",
            "#5766EC",
          ],
        },
        "label": {
          "enable": true,
        },
        "legend": {
          "border": true,
          "enable": true,
          "labelFontColor": "#646A73",
          "labelFontSize": 12,
          "labelFontWeight": 400,
          "maxSize": 1,
          "position": "rt",
          "shapeType": "rectRound",
        },
        "tooltip": {
          "enable": true,
        },
      },
    },
  },
  "dataset": [
    {
      "__DimGroupID__": "A-goalProfit-goalProfit",
      "__DimGroup__": "A-goalProfit",
      "__MeaId__": "goalProfit",
      "__MeaName__": "goalProfit",
      "__MeaValue__": 10,
      "__OriginalData__": {
        "date": "2019",
        "goalProfit": 10,
        "leftCount": 1,
        "profit": 10,
        "sales": 100,
        "salesCount": 100,
        "type": "A",
      },
      "date": "2019",
      "goalProfit": 10,
      "type": "A",
    },
    {
      "__DimGroupID__": "A-profit-profit",
      "__DimGroup__": "A-profit",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 10,
      "__OriginalData__": {
        "date": "2019",
        "goalProfit": 10,
        "leftCount": 1,
        "profit": 10,
        "sales": 100,
        "salesCount": 100,
        "type": "A",
      },
      "date": "2019",
      "profit": 10,
      "type": "A",
    },
    {
      "__DimGroupID__": "A-sales-sales",
      "__DimGroup__": "A-sales",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 100,
      "__OriginalData__": {
        "date": "2019",
        "goalProfit": 10,
        "leftCount": 1,
        "profit": 10,
        "sales": 100,
        "salesCount": 100,
        "type": "A",
      },
      "date": "2019",
      "sales": 100,
      "type": "A",
    },
    {
      "__DimGroupID__": "A-leftCount-leftCount",
      "__DimGroup__": "A-leftCount",
      "__MeaId__": "leftCount",
      "__MeaName__": "leftCount",
      "__MeaValue__": 1,
      "__OriginalData__": {
        "date": "2019",
        "goalProfit": 10,
        "leftCount": 1,
        "profit": 10,
        "sales": 100,
        "salesCount": 100,
        "type": "A",
      },
      "date": "2019",
      "leftCount": 1,
      "type": "A",
    },
    {
      "__DimGroupID__": "A-salesCount-salesCount",
      "__DimGroup__": "A-salesCount",
      "__MeaId__": "salesCount",
      "__MeaName__": "salesCount",
      "__MeaValue__": 100,
      "__OriginalData__": {
        "date": "2019",
        "goalProfit": 10,
        "leftCount": 1,
        "profit": 10,
        "sales": 100,
        "salesCount": 100,
        "type": "A",
      },
      "date": "2019",
      "salesCount": 100,
      "type": "A",
    },
    {
      "__DimGroupID__": "A-goalProfit-goalProfit",
      "__DimGroup__": "A-goalProfit",
      "__MeaId__": "goalProfit",
      "__MeaName__": "goalProfit",
      "__MeaValue__": 30,
      "__OriginalData__": {
        "date": "2020",
        "goalProfit": 30,
        "leftCount": 2,
        "profit": 30,
        "sales": 320,
        "salesCount": 200,
        "type": "A",
      },
      "date": "2020",
      "goalProfit": 30,
      "type": "A",
    },
    {
      "__DimGroupID__": "A-profit-profit",
      "__DimGroup__": "A-profit",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 30,
      "__OriginalData__": {
        "date": "2020",
        "goalProfit": 30,
        "leftCount": 2,
        "profit": 30,
        "sales": 320,
        "salesCount": 200,
        "type": "A",
      },
      "date": "2020",
      "profit": 30,
      "type": "A",
    },
    {
      "__DimGroupID__": "A-sales-sales",
      "__DimGroup__": "A-sales",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 320,
      "__OriginalData__": {
        "date": "2020",
        "goalProfit": 30,
        "leftCount": 2,
        "profit": 30,
        "sales": 320,
        "salesCount": 200,
        "type": "A",
      },
      "date": "2020",
      "sales": 320,
      "type": "A",
    },
    {
      "__DimGroupID__": "A-leftCount-leftCount",
      "__DimGroup__": "A-leftCount",
      "__MeaId__": "leftCount",
      "__MeaName__": "leftCount",
      "__MeaValue__": 2,
      "__OriginalData__": {
        "date": "2020",
        "goalProfit": 30,
        "leftCount": 2,
        "profit": 30,
        "sales": 320,
        "salesCount": 200,
        "type": "A",
      },
      "date": "2020",
      "leftCount": 2,
      "type": "A",
    },
    {
      "__DimGroupID__": "A-salesCount-salesCount",
      "__DimGroup__": "A-salesCount",
      "__MeaId__": "salesCount",
      "__MeaName__": "salesCount",
      "__MeaValue__": 200,
      "__OriginalData__": {
        "date": "2020",
        "goalProfit": 30,
        "leftCount": 2,
        "profit": 30,
        "sales": 320,
        "salesCount": 200,
        "type": "A",
      },
      "date": "2020",
      "salesCount": 200,
      "type": "A",
    },
    {
      "__DimGroupID__": "A-goalProfit-goalProfit",
      "__DimGroup__": "A-goalProfit",
      "__MeaId__": "goalProfit",
      "__MeaName__": "goalProfit",
      "__MeaValue__": 30,
      "__OriginalData__": {
        "date": "2021",
        "goalProfit": 30,
        "leftCount": 3,
        "profit": 30,
        "sales": 300,
        "salesCount": 300,
        "type": "A",
      },
      "date": "2021",
      "goalProfit": 30,
      "type": "A",
    },
    {
      "__DimGroupID__": "A-profit-profit",
      "__DimGroup__": "A-profit",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 30,
      "__OriginalData__": {
        "date": "2021",
        "goalProfit": 30,
        "leftCount": 3,
        "profit": 30,
        "sales": 300,
        "salesCount": 300,
        "type": "A",
      },
      "date": "2021",
      "profit": 30,
      "type": "A",
    },
    {
      "__DimGroupID__": "A-sales-sales",
      "__DimGroup__": "A-sales",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 300,
      "__OriginalData__": {
        "date": "2021",
        "goalProfit": 30,
        "leftCount": 3,
        "profit": 30,
        "sales": 300,
        "salesCount": 300,
        "type": "A",
      },
      "date": "2021",
      "sales": 300,
      "type": "A",
    },
    {
      "__DimGroupID__": "A-leftCount-leftCount",
      "__DimGroup__": "A-leftCount",
      "__MeaId__": "leftCount",
      "__MeaName__": "leftCount",
      "__MeaValue__": 3,
      "__OriginalData__": {
        "date": "2021",
        "goalProfit": 30,
        "leftCount": 3,
        "profit": 30,
        "sales": 300,
        "salesCount": 300,
        "type": "A",
      },
      "date": "2021",
      "leftCount": 3,
      "type": "A",
    },
    {
      "__DimGroupID__": "A-salesCount-salesCount",
      "__DimGroup__": "A-salesCount",
      "__MeaId__": "salesCount",
      "__MeaName__": "salesCount",
      "__MeaValue__": 300,
      "__OriginalData__": {
        "date": "2021",
        "goalProfit": 30,
        "leftCount": 3,
        "profit": 30,
        "sales": 300,
        "salesCount": 300,
        "type": "A",
      },
      "date": "2021",
      "salesCount": 300,
      "type": "A",
    },
    {
      "__DimGroupID__": "A-goalProfit-goalProfit",
      "__DimGroup__": "A-goalProfit",
      "__MeaId__": "goalProfit",
      "__MeaName__": "goalProfit",
      "__MeaValue__": 50,
      "__OriginalData__": {
        "date": "2022",
        "goalProfit": 50,
        "leftCount": 4,
        "profit": 50,
        "sales": 240,
        "salesCount": 400,
        "type": "A",
      },
      "date": "2022",
      "goalProfit": 50,
      "type": "A",
    },
    {
      "__DimGroupID__": "A-profit-profit",
      "__DimGroup__": "A-profit",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 50,
      "__OriginalData__": {
        "date": "2022",
        "goalProfit": 50,
        "leftCount": 4,
        "profit": 50,
        "sales": 240,
        "salesCount": 400,
        "type": "A",
      },
      "date": "2022",
      "profit": 50,
      "type": "A",
    },
    {
      "__DimGroupID__": "A-sales-sales",
      "__DimGroup__": "A-sales",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 240,
      "__OriginalData__": {
        "date": "2022",
        "goalProfit": 50,
        "leftCount": 4,
        "profit": 50,
        "sales": 240,
        "salesCount": 400,
        "type": "A",
      },
      "date": "2022",
      "sales": 240,
      "type": "A",
    },
    {
      "__DimGroupID__": "A-leftCount-leftCount",
      "__DimGroup__": "A-leftCount",
      "__MeaId__": "leftCount",
      "__MeaName__": "leftCount",
      "__MeaValue__": 4,
      "__OriginalData__": {
        "date": "2022",
        "goalProfit": 50,
        "leftCount": 4,
        "profit": 50,
        "sales": 240,
        "salesCount": 400,
        "type": "A",
      },
      "date": "2022",
      "leftCount": 4,
      "type": "A",
    },
    {
      "__DimGroupID__": "A-salesCount-salesCount",
      "__DimGroup__": "A-salesCount",
      "__MeaId__": "salesCount",
      "__MeaName__": "salesCount",
      "__MeaValue__": 400,
      "__OriginalData__": {
        "date": "2022",
        "goalProfit": 50,
        "leftCount": 4,
        "profit": 50,
        "sales": 240,
        "salesCount": 400,
        "type": "A",
      },
      "date": "2022",
      "salesCount": 400,
      "type": "A",
    },
    {
      "__DimGroupID__": "A-goalProfit-goalProfit",
      "__DimGroup__": "A-goalProfit",
      "__MeaId__": "goalProfit",
      "__MeaName__": "goalProfit",
      "__MeaValue__": 40,
      "__OriginalData__": {
        "date": "2023",
        "goalProfit": 40,
        "leftCount": 5,
        "profit": 40,
        "sales": 500,
        "salesCount": 500,
        "type": "A",
      },
      "date": "2023",
      "goalProfit": 40,
      "type": "A",
    },
    {
      "__DimGroupID__": "A-profit-profit",
      "__DimGroup__": "A-profit",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 40,
      "__OriginalData__": {
        "date": "2023",
        "goalProfit": 40,
        "leftCount": 5,
        "profit": 40,
        "sales": 500,
        "salesCount": 500,
        "type": "A",
      },
      "date": "2023",
      "profit": 40,
      "type": "A",
    },
    {
      "__DimGroupID__": "A-sales-sales",
      "__DimGroup__": "A-sales",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 500,
      "__OriginalData__": {
        "date": "2023",
        "goalProfit": 40,
        "leftCount": 5,
        "profit": 40,
        "sales": 500,
        "salesCount": 500,
        "type": "A",
      },
      "date": "2023",
      "sales": 500,
      "type": "A",
    },
    {
      "__DimGroupID__": "A-leftCount-leftCount",
      "__DimGroup__": "A-leftCount",
      "__MeaId__": "leftCount",
      "__MeaName__": "leftCount",
      "__MeaValue__": 5,
      "__OriginalData__": {
        "date": "2023",
        "goalProfit": 40,
        "leftCount": 5,
        "profit": 40,
        "sales": 500,
        "salesCount": 500,
        "type": "A",
      },
      "date": "2023",
      "leftCount": 5,
      "type": "A",
    },
    {
      "__DimGroupID__": "A-salesCount-salesCount",
      "__DimGroup__": "A-salesCount",
      "__MeaId__": "salesCount",
      "__MeaName__": "salesCount",
      "__MeaValue__": 500,
      "__OriginalData__": {
        "date": "2023",
        "goalProfit": 40,
        "leftCount": 5,
        "profit": 40,
        "sales": 500,
        "salesCount": 500,
        "type": "A",
      },
      "date": "2023",
      "salesCount": 500,
      "type": "A",
    },
  ],
  "datasetReshapeInfo": [
    {
      "foldInfo": {
        "foldMap": {
          "goalProfit": "goalProfit",
          "leftCount": "leftCount",
          "profit": "profit",
          "sales": "sales",
          "salesCount": "salesCount",
        },
        "measureId": "__MeaId__",
        "measureName": "__MeaName__",
        "measureValue": "__MeaValue__",
      },
      "id": "2D1M",
      "index": 0,
      "unfoldInfo": {
        "colorIdMap": {
          "A-goalProfit-goalProfit": "A-goalProfit",
          "A-leftCount-leftCount": "A-leftCount",
          "A-profit-profit": "A-profit",
          "A-sales-sales": "A-sales",
          "A-salesCount-salesCount": "A-salesCount",
        },
        "colorItems": [
          "A-goalProfit-goalProfit",
          "A-profit-profit",
          "A-sales-sales",
          "A-leftCount-leftCount",
          "A-salesCount-salesCount",
        ],
        "groupId": "__DimGroupID__",
        "groupName": "__DimGroup__",
      },
    },
  ],
  "dimensions": [
    {
      "alias": "date",
      "id": "date",
      "location": "dimension",
    },
    {
      "alias": "type",
      "id": "type",
      "location": "dimension",
    },
  ],
  "encoding": [
    {
      "color": [
        "__MeaValue__",
      ],
      "x": [
        "date",
      ],
      "y": [
        "__DimGroup__",
      ],
    },
  ],
  "locale": "zh-CN",
  "markStyle": {},
  "measures": [
    {
      "alias": "goalProfit",
      "id": "goalProfit",
    },
    {
      "alias": "profit",
      "id": "profit",
    },
    {
      "alias": "sales",
      "id": "sales",
    },
    {
      "alias": "leftCount",
      "id": "leftCount",
    },
    {
      "alias": "salesCount",
      "id": "salesCount",
    },
  ],
}
`;

exports[`simpleHeatmap 2`] = `
{
  "animation": true,
  "axes": [
    {
      "bandPadding": 0,
      "orient": "left",
      "type": "band",
    },
    {
      "bandPadding": 0,
      "orient": "bottom",
      "type": "band",
    },
  ],
  "background": "transparent",
  "cell": {
    "style": {
      "fill": {
        "field": "__MeaValue__",
        "scale": "color",
      },
      "lineWidth": 1,
      "shape": "rect",
      "stroke": "#ffffff",
    },
  },
  "color": {
    "domain": [
      {
        "dataId": "2D1M",
        "fields": [
          "__MeaValue__",
        ],
      },
    ],
    "range": [
      "#C2CEFF",
      "#B7C4FF",
      "#ACB9FF",
      "#A0AEFF",
      "#95A3FF",
      "#8998FF",
      "#7C8CFA",
      "#7080F4",
      "#6372F0",
      "#5766EC",
    ],
    "type": "linear",
  },
  "data": {
    "fields": {
      "date": {
        "sortIndex": 0,
      },
    },
    "id": "2D1M",
    "values": [
      {
        "__DimGroupID__": "A-goalProfit-goalProfit",
        "__DimGroup__": "A-goalProfit",
        "__MeaId__": "goalProfit",
        "__MeaName__": "goalProfit",
        "__MeaValue__": 10,
        "__OriginalData__": {
          "date": "2019",
          "goalProfit": 10,
          "leftCount": 1,
          "profit": 10,
          "sales": 100,
          "salesCount": 100,
          "type": "A",
        },
        "date": "2019",
        "goalProfit": 10,
        "type": "A",
      },
      {
        "__DimGroupID__": "A-profit-profit",
        "__DimGroup__": "A-profit",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 10,
        "__OriginalData__": {
          "date": "2019",
          "goalProfit": 10,
          "leftCount": 1,
          "profit": 10,
          "sales": 100,
          "salesCount": 100,
          "type": "A",
        },
        "date": "2019",
        "profit": 10,
        "type": "A",
      },
      {
        "__DimGroupID__": "A-sales-sales",
        "__DimGroup__": "A-sales",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 100,
        "__OriginalData__": {
          "date": "2019",
          "goalProfit": 10,
          "leftCount": 1,
          "profit": 10,
          "sales": 100,
          "salesCount": 100,
          "type": "A",
        },
        "date": "2019",
        "sales": 100,
        "type": "A",
      },
      {
        "__DimGroupID__": "A-leftCount-leftCount",
        "__DimGroup__": "A-leftCount",
        "__MeaId__": "leftCount",
        "__MeaName__": "leftCount",
        "__MeaValue__": 1,
        "__OriginalData__": {
          "date": "2019",
          "goalProfit": 10,
          "leftCount": 1,
          "profit": 10,
          "sales": 100,
          "salesCount": 100,
          "type": "A",
        },
        "date": "2019",
        "leftCount": 1,
        "type": "A",
      },
      {
        "__DimGroupID__": "A-salesCount-salesCount",
        "__DimGroup__": "A-salesCount",
        "__MeaId__": "salesCount",
        "__MeaName__": "salesCount",
        "__MeaValue__": 100,
        "__OriginalData__": {
          "date": "2019",
          "goalProfit": 10,
          "leftCount": 1,
          "profit": 10,
          "sales": 100,
          "salesCount": 100,
          "type": "A",
        },
        "date": "2019",
        "salesCount": 100,
        "type": "A",
      },
      {
        "__DimGroupID__": "A-goalProfit-goalProfit",
        "__DimGroup__": "A-goalProfit",
        "__MeaId__": "goalProfit",
        "__MeaName__": "goalProfit",
        "__MeaValue__": 30,
        "__OriginalData__": {
          "date": "2020",
          "goalProfit": 30,
          "leftCount": 2,
          "profit": 30,
          "sales": 320,
          "salesCount": 200,
          "type": "A",
        },
        "date": "2020",
        "goalProfit": 30,
        "type": "A",
      },
      {
        "__DimGroupID__": "A-profit-profit",
        "__DimGroup__": "A-profit",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 30,
        "__OriginalData__": {
          "date": "2020",
          "goalProfit": 30,
          "leftCount": 2,
          "profit": 30,
          "sales": 320,
          "salesCount": 200,
          "type": "A",
        },
        "date": "2020",
        "profit": 30,
        "type": "A",
      },
      {
        "__DimGroupID__": "A-sales-sales",
        "__DimGroup__": "A-sales",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 320,
        "__OriginalData__": {
          "date": "2020",
          "goalProfit": 30,
          "leftCount": 2,
          "profit": 30,
          "sales": 320,
          "salesCount": 200,
          "type": "A",
        },
        "date": "2020",
        "sales": 320,
        "type": "A",
      },
      {
        "__DimGroupID__": "A-leftCount-leftCount",
        "__DimGroup__": "A-leftCount",
        "__MeaId__": "leftCount",
        "__MeaName__": "leftCount",
        "__MeaValue__": 2,
        "__OriginalData__": {
          "date": "2020",
          "goalProfit": 30,
          "leftCount": 2,
          "profit": 30,
          "sales": 320,
          "salesCount": 200,
          "type": "A",
        },
        "date": "2020",
        "leftCount": 2,
        "type": "A",
      },
      {
        "__DimGroupID__": "A-salesCount-salesCount",
        "__DimGroup__": "A-salesCount",
        "__MeaId__": "salesCount",
        "__MeaName__": "salesCount",
        "__MeaValue__": 200,
        "__OriginalData__": {
          "date": "2020",
          "goalProfit": 30,
          "leftCount": 2,
          "profit": 30,
          "sales": 320,
          "salesCount": 200,
          "type": "A",
        },
        "date": "2020",
        "salesCount": 200,
        "type": "A",
      },
      {
        "__DimGroupID__": "A-goalProfit-goalProfit",
        "__DimGroup__": "A-goalProfit",
        "__MeaId__": "goalProfit",
        "__MeaName__": "goalProfit",
        "__MeaValue__": 30,
        "__OriginalData__": {
          "date": "2021",
          "goalProfit": 30,
          "leftCount": 3,
          "profit": 30,
          "sales": 300,
          "salesCount": 300,
          "type": "A",
        },
        "date": "2021",
        "goalProfit": 30,
        "type": "A",
      },
      {
        "__DimGroupID__": "A-profit-profit",
        "__DimGroup__": "A-profit",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 30,
        "__OriginalData__": {
          "date": "2021",
          "goalProfit": 30,
          "leftCount": 3,
          "profit": 30,
          "sales": 300,
          "salesCount": 300,
          "type": "A",
        },
        "date": "2021",
        "profit": 30,
        "type": "A",
      },
      {
        "__DimGroupID__": "A-sales-sales",
        "__DimGroup__": "A-sales",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 300,
        "__OriginalData__": {
          "date": "2021",
          "goalProfit": 30,
          "leftCount": 3,
          "profit": 30,
          "sales": 300,
          "salesCount": 300,
          "type": "A",
        },
        "date": "2021",
        "sales": 300,
        "type": "A",
      },
      {
        "__DimGroupID__": "A-leftCount-leftCount",
        "__DimGroup__": "A-leftCount",
        "__MeaId__": "leftCount",
        "__MeaName__": "leftCount",
        "__MeaValue__": 3,
        "__OriginalData__": {
          "date": "2021",
          "goalProfit": 30,
          "leftCount": 3,
          "profit": 30,
          "sales": 300,
          "salesCount": 300,
          "type": "A",
        },
        "date": "2021",
        "leftCount": 3,
        "type": "A",
      },
      {
        "__DimGroupID__": "A-salesCount-salesCount",
        "__DimGroup__": "A-salesCount",
        "__MeaId__": "salesCount",
        "__MeaName__": "salesCount",
        "__MeaValue__": 300,
        "__OriginalData__": {
          "date": "2021",
          "goalProfit": 30,
          "leftCount": 3,
          "profit": 30,
          "sales": 300,
          "salesCount": 300,
          "type": "A",
        },
        "date": "2021",
        "salesCount": 300,
        "type": "A",
      },
      {
        "__DimGroupID__": "A-goalProfit-goalProfit",
        "__DimGroup__": "A-goalProfit",
        "__MeaId__": "goalProfit",
        "__MeaName__": "goalProfit",
        "__MeaValue__": 50,
        "__OriginalData__": {
          "date": "2022",
          "goalProfit": 50,
          "leftCount": 4,
          "profit": 50,
          "sales": 240,
          "salesCount": 400,
          "type": "A",
        },
        "date": "2022",
        "goalProfit": 50,
        "type": "A",
      },
      {
        "__DimGroupID__": "A-profit-profit",
        "__DimGroup__": "A-profit",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 50,
        "__OriginalData__": {
          "date": "2022",
          "goalProfit": 50,
          "leftCount": 4,
          "profit": 50,
          "sales": 240,
          "salesCount": 400,
          "type": "A",
        },
        "date": "2022",
        "profit": 50,
        "type": "A",
      },
      {
        "__DimGroupID__": "A-sales-sales",
        "__DimGroup__": "A-sales",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 240,
        "__OriginalData__": {
          "date": "2022",
          "goalProfit": 50,
          "leftCount": 4,
          "profit": 50,
          "sales": 240,
          "salesCount": 400,
          "type": "A",
        },
        "date": "2022",
        "sales": 240,
        "type": "A",
      },
      {
        "__DimGroupID__": "A-leftCount-leftCount",
        "__DimGroup__": "A-leftCount",
        "__MeaId__": "leftCount",
        "__MeaName__": "leftCount",
        "__MeaValue__": 4,
        "__OriginalData__": {
          "date": "2022",
          "goalProfit": 50,
          "leftCount": 4,
          "profit": 50,
          "sales": 240,
          "salesCount": 400,
          "type": "A",
        },
        "date": "2022",
        "leftCount": 4,
        "type": "A",
      },
      {
        "__DimGroupID__": "A-salesCount-salesCount",
        "__DimGroup__": "A-salesCount",
        "__MeaId__": "salesCount",
        "__MeaName__": "salesCount",
        "__MeaValue__": 400,
        "__OriginalData__": {
          "date": "2022",
          "goalProfit": 50,
          "leftCount": 4,
          "profit": 50,
          "sales": 240,
          "salesCount": 400,
          "type": "A",
        },
        "date": "2022",
        "salesCount": 400,
        "type": "A",
      },
      {
        "__DimGroupID__": "A-goalProfit-goalProfit",
        "__DimGroup__": "A-goalProfit",
        "__MeaId__": "goalProfit",
        "__MeaName__": "goalProfit",
        "__MeaValue__": 40,
        "__OriginalData__": {
          "date": "2023",
          "goalProfit": 40,
          "leftCount": 5,
          "profit": 40,
          "sales": 500,
          "salesCount": 500,
          "type": "A",
        },
        "date": "2023",
        "goalProfit": 40,
        "type": "A",
      },
      {
        "__DimGroupID__": "A-profit-profit",
        "__DimGroup__": "A-profit",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 40,
        "__OriginalData__": {
          "date": "2023",
          "goalProfit": 40,
          "leftCount": 5,
          "profit": 40,
          "sales": 500,
          "salesCount": 500,
          "type": "A",
        },
        "date": "2023",
        "profit": 40,
        "type": "A",
      },
      {
        "__DimGroupID__": "A-sales-sales",
        "__DimGroup__": "A-sales",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 500,
        "__OriginalData__": {
          "date": "2023",
          "goalProfit": 40,
          "leftCount": 5,
          "profit": 40,
          "sales": 500,
          "salesCount": 500,
          "type": "A",
        },
        "date": "2023",
        "sales": 500,
        "type": "A",
      },
      {
        "__DimGroupID__": "A-leftCount-leftCount",
        "__DimGroup__": "A-leftCount",
        "__MeaId__": "leftCount",
        "__MeaName__": "leftCount",
        "__MeaValue__": 5,
        "__OriginalData__": {
          "date": "2023",
          "goalProfit": 40,
          "leftCount": 5,
          "profit": 40,
          "sales": 500,
          "salesCount": 500,
          "type": "A",
        },
        "date": "2023",
        "leftCount": 5,
        "type": "A",
      },
      {
        "__DimGroupID__": "A-salesCount-salesCount",
        "__DimGroup__": "A-salesCount",
        "__MeaId__": "salesCount",
        "__MeaName__": "salesCount",
        "__MeaValue__": 500,
        "__OriginalData__": {
          "date": "2023",
          "goalProfit": 40,
          "leftCount": 5,
          "profit": 40,
          "sales": 500,
          "salesCount": 500,
          "type": "A",
        },
        "date": "2023",
        "salesCount": 500,
        "type": "A",
      },
    ],
  },
  "direction": "vertical",
  "label": {
    "formatMethod": [Function],
    "smartInvert": true,
    "visible": true,
  },
  "legends": {
    "field": "__MeaValue__",
    "inverse": true,
    "orient": "right",
    "position": "start",
    "type": "color",
    "visible": true,
  },
  "padding": 0,
  "point": {
    "state": {
      "dimension_hover": {
        "outerBorder": {
          "distance": 2,
          "lineWidth": 4,
          "strokeOpacity": 0.25,
        },
        "scaleX": 1.4,
        "scaleY": 1.4,
      },
    },
  },
  "region": [
    {
      "clip": true,
    },
  ],
  "tooltip": {
    "dimension": {
      "content": [
        {
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
      ],
    },
    "mark": {
      "content": [
        {
          "hasShape": true,
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
        {
          "hasShape": true,
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
        {
          "hasShape": true,
          "key": [Function],
          "value": [Function],
          "visible": true,
        },
      ],
      "title": {
        "visible": true,
      },
    },
    "visible": true,
  },
  "type": "heatmap",
  "valueField": "__MeaValue__",
  "xField": "date",
  "yField": "__DimGroup__",
}
`;
